fixed tag issue + aligned coins in searchpage + made home search bar use find coin function

--- a/frontend/src/css/home.css
+++ b/frontend/src/css/home.css
@@ -86,3 +86,12 @@ body{
 .selectB{
     width: 20vw;
 }
+
+#descriptionItem{
+    font-size: small;
+    width: 60vw;
+}
+
+#coinPage{
+    margin-top: 2vw;
+}
